docs(README): update instructions